Fixed the overflow issue with a height calculation

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,7 +3,7 @@
 
 body {
   padding: 20px 40px 20px 40px;
-  height: 100vh;
+  height: calc(100vh - 80px);
   width: 100vw;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#0b0a26+0,2989d8+50,207cca+51,110d40+100 */
   background: #0b0a26; /* Old browsers */
